# AutoSKLearn-framework

./: .gitignore  .replit  config.py  config.yaml  ml_framework.db  pyproject.toml  replit.nix  requirements.txt  run.py  tailwind.config.js
app/: data_processing.py  logging_config.py  main.py  model_evaluation.py  model_selection.py  model_training.py  model_updater.py  monitoring.py  prediction.py  visualization.py
app/api/: docs.py  routes.py
app/core/: config.py  logging_config.py
app/db/: database.py  models.py
app/ml/: data_processing.py  data_validation.py  model_evaluation.py  model_export.py  model_manager.py  model_optimization.py  model_performance.py  model_report.py  model_selection.py  model_training.py  model_updater.py  model_validation.py  model_validator.py  monitoring.py  prediction.py
app/reporting/: report_generator.py
app/schemas/: model.py
app/utils/: alerts.py  cache.py  documentation.py  exceptions.py  monitoring.py  taske.py  visualization.py
app/visualization/: dashboard.py
monitoring/system/: metrics.json
static/css/: style.css  styles.css
static/js/: app.js  main.js
templates/: api_docs.html  base.html  dashboard.html  index.html  models.html  predictions.html  profile_report.html  results.html
