[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
  fastapi==0.115.4,
  joblib==1.4.2,
  matplotlib==3.9.2,
  numpy==2.1.3,
  optuna==4.0.0,
  pandas==2.2.3,
  pandas-profiling==3.6.6,
  pydantic==2.9.2,
  python-multipart==0.0.17,
  schedule==1.2.2,
  scikit-learn==1.5.2,
  seaborn==0.13.2,
  shap==0.46.0,
  uvicorn==0.32.0
]
